# fortran-numpy-tobytes

./: README.md  bad_ways.py  correct.py  pyproject.toml
src/numpy_fortran_tobytes/: __init__.py
